# blogging-platform-api

./: .gitignore  README.md  pyproject.toml
blogging_platform_api/: __init__.py  dependencies.py
blogging_platform_api/core/: database.py  settings.py
blogging_platform_api/dtos/: posts.py
blogging_platform_api/models/: post.py
blogging_platform_api/repositories/: posts.py
blogging_platform_api/routes/: posts.py
blogging_platform_api/services/: posts.py
